# competition_samples

table/binary_classification/: .gitignore  pyproject.toml
table/binary_classification/notebook/: analysis_predict_proba.ipynb  cb_feature_importance.ipynb  eda.ipynb  lgbm_feature_importance.ipynb  xgb_feature_importance.ipynb
table/binary_classification/src/eval/: eval.py
table/binary_classification/src/model/: cb.py  cb_base.py  lgbm.py  lgbm_base.py  lgbm_stacking_lgbm_xgb_cb_base.py  svc.py  svc_base.py  tn.py  xgb.py  xgb_base.py
table/binary_classification/src/predict/: cb_predict.py  lgbm_predict.py  svc_predict.py  tn_predict.py  xgb_predict.py
table/binary_classification/src/preprocessing/: encoder.py  missing_value.py  tools.py
table/binary_classification/src/save/: save_model.py
table/binary_classification/src/training/: cb_training.py  lgbm_training.py  svc_training.py  tn_training.py  xgb_training.py
