[tool.poetry]
name = "binary-classification"
version = "0.1.0"
description = ""
authors = ["hachi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
torch = "^2.2.0"
catboost = "^1.2.2"
lightgbm = "^4.3.0"
pytorch-tabnet = "^4.1.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
category-encoders = "^2.6.3"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
